# Bikeshare-demand-forecasting

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py  schemas.py
configs/: config.yaml
data/: README.md
docker/: Dockerfile
docs/: architecture.md
src/: __init__.py  explain.py  features.py  ingest.py  predict.py  train.py
tests/: test_api.py  test_features.py  test_train.py
